--- a/frontend_web/astro/index.html
+++ b/frontend_web/astro/index.html
@@ -7,8 +7,21 @@
       type="image/svg+xml"
       href="./src/assets/images/AstroGlow-logo.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Astro Glow</title>
+    <style>
+      html, body {
+        overflow-x: hidden;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #root {
+        position: relative;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
